--- a/index.html
+++ b/index.html
@@ -30,8 +30,15 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-    </div>
+      <!-- single row to experiment on-->
+      <div class= "row">
+       <div class= "hour"> 12:00 </div>
+       <textarea class= "past" rows= 3> sample text</textarea>
+       <button class= "saveBtn" > save </button>
+      </div>
 
+  
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src= "./.assets/script.js"></script>
