--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <!-- single row to experiment on-->
       <div class= "row">
        <div class= "hour"> 12:00 </div>
-       <textarea class= "past" rows= 3> sample text</textarea>
-       <button class= "saveBtn" > save </button>
+       <textarea id= "12:00AM" name= "12:00AM" class= "past present future" rows= 3>sample text</textarea>
+       <button id= "12:00AMSave" class= "saveBtn" onclick="saveBtn()"> save </button>
       </div>
 
   
