All time blocks have been added. Extracted the current hour using moment.js. Each text areas attributed to an hour of the day has been alloted an hour value to compare to the current hour. TODO: iterate over all time blocks to modify the text area's class according to comparisons to areas' hour value to the current hour which has been converted into a number value. TODO: have save button iterate over all text area elements to store their values and display them when the page reloads.

--- a/index.html
+++ b/index.html
@@ -32,10 +32,130 @@
       <!-- Timeblocks go here -->
       <!-- single row to experiment on-->
       <div class= "row">
-       <div class= "hour"> 12:00 </div>
-       <textarea id= "12:00AM" name= "12:00AM" class= "past present future" rows= 3>sample text</textarea>
-       <button id= "12:00AMSave" class= "saveBtn" onclick="saveBtn()"> save </button>
+       <div class= "hour"> 12:00AM</div>
+       <textarea name= "12:00AM" class= "past timeStamp" rows= 3>sample text</textarea>
+       <button class= "saveBtn" onclick="saveBtn()"> save </button>
       </div>
+      <div class= "row">
+        <div class= "hour"> 1:00AM  </div>
+        <textarea name= "1:00AM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 2:00AM  </div>
+        <textarea name= "2:00AM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 3:00AM  </div>
+        <textarea name= "3:00AM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 4:00AM  </div>
+        <textarea name= "4:00AM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 5:00AM  </div>
+        <textarea name= "5:00AM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 6:00AM  </div>
+        <textarea name= "6:00AM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 7:00AM  </div>
+        <textarea name= "7:00AM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 8:00AM  </div>
+        <textarea name= "8:00AM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 9:00AM  </div>
+        <textarea name= "9:00AM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 10:00AM</div>
+        <textarea name= "10:00AM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 11:00AM</div>
+        <textarea name= "11:00AM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 12:00PM</div>
+        <textarea name= "12:00PM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 1:00PM  </div>
+        <textarea name= "1:00PM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 2:00PM  </div>
+        <textarea name= "2:00PM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 3:00PM  </div>
+        <textarea name= "3:00PM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 4:00PM  </div>
+        <textarea name= "4:00PM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 5:00PM  </div>
+        <textarea name= "5:00PM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 6:00PM  </div>
+        <textarea name= "6:00PM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 7:00PM  </div>
+        <textarea name= "7:00PM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 8:00PM  </div>
+        <textarea name= "8:00PM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 9:00PM  </div>
+        <textarea name= "9:00PM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 10:00PM</div>
+        <textarea name= "1:00PM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 11:00PM</div>
+        <textarea name= "11:00PM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
+       <div class= "row">
+        <div class= "hour"> 12:00PM</div>
+        <textarea name= "12:00PM" class= "past timeStamp" rows= 3>sample text</textarea>
+        <button class= "saveBtn" onclick="saveBtn()"> save </button>
+       </div>
 
   
     </div>
